Fix on v2 icon cards height to keep red lines aligned

--- a/blocks/v2-icon-cards/v2-icon-cards.css
+++ b/blocks/v2-icon-cards/v2-icon-cards.css
@@ -166,6 +166,7 @@
     align-self: center;
     max-width: 329px;
     width: 100%;
+    height: 250px;
   }
 }
 
